# fortijson-rpc

./: .gitignore  MANIFEST  setup.cfg  setup.py
FortiJson/: __init__.py  rpcrequest.py
