[metadata]
# replace with your username:
name = FortiJson
version = 0.0.1
author = Todd Albiston
author_email = foxtrot711@gmail.com
description = Fortinet jsonRPC format helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/talbiston/fortijson-rpc
project_urls =
    Bug Tracker = https://github.com/pypa/fortijson/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src